2018-02-10         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c, msg.c: Add a call to fflush(NULL) before each call
	to abort(), since GLIBC 2.27 doesn't necessarily flush before
	aborting.  Thanks to Nelson H.F. Beebe for the report.

2018-02-09         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (socketopen): Rearrange assigning the flags to use
	AI_ADDRCONFIG only if family is AF_UNSPEC. Thanks to
	Houder <houder@xs4all.nl> for the report and initial
	code suggestion.

2018-02-07         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	Print +"01" should print "1", not "01".
	* interpret.h (Op_unary_plus): Need to make a new number node that does
	not contain the original string representation. The logic is copied
	from Op_unary_minus.
	* mpfr.c (mpg_interpret): Add new case for Op_unary_plus based on
	the Op_unary_minus logic. We need a fresh number node that does not
	contain the string.

2018-01-28         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub: Updated.

2018-01-25         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (main): Add explanatory comment about O_APPEND stuff.
	* NEWS: Updated.

2018-01-22         Arnold D. Robbins     <arnold@skeeve.com>

	Fix the inplace tests on *BSD systems.

	* main.c (main): Add O_APPEND flag to fileno(stderr).

2018-01-17         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_isarray): Check that tmp is Node_var
	before calling DEREF. Thanks to Denis Shirokov
	<cosmogen@gmail.com> for the report.

2018-01-15         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Small typo fix.
	* config.sub: Updated.
	* io.c (fork_and_open_slave_pty): Rationalize down to one
	function with two bodies.
	(set_slave_pty_attributes, push_pty_line_disciplines): Move
	into #ifdef for TERMIOS_H. Helps out with VMS compiling.

2018-01-12         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.h: Remove extraneous '*' on parameters of