@@ -1,3 +1,7 @@
+2018-02-19         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkapi.h, io.c, msg.c: Update copyright year.
+
 2018-02-10         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* main.c, msg.c: Add a call to fflush(NULL) before each call
@@ -101,7 +105,7 @@
 	* awkgram.y (set_profile_text): Set n->strndmode to MPFR_round_mode.
 	* builtin.c (do_print): Remove tests and just call force_string_fmt.
 	* field.c (set_record): Set n->strndmode to MPFR_round_mode.
-	* gawk_api.c (api_sym_update_scalar): Set r->strndmode to
+	* gawkapi.c (api_sym_update_scalar): Set r->strndmode to
 	MPFR_round_mode.
 	* interpret.h (r_interpret): For Op_assign_concat, set t1->strndmode
 	to MPFR_round_mode.
